Update file_rotate_create_correctness test

--- a/.envrc.example
+++ b/.envrc.example
@@ -2,6 +2,10 @@
 # you are doing.
 export ANSIBLE_CONFIG=./ansible/ansible.cfg
 
+# Specifying which AWS credentails set to use. See the "Setup" section in the
+# README.
+export AWS_PROFILE=vector
+
 # An AWS compatible key pair. This is used for SSH access to all test machines:
 # https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-key-pairs.html#having-ec2-create-your-key-pair
 export VECTOR_TEST_PRIV_KEY=~/.ssh/vector_tests
@@ -9,7 +13,7 @@ export VECTOR_TEST_PUB_KEY=~/.ssh/vector_tests.pub
 
 # Test subjects. Update as necessary. If a test does not support a subject Vector
 # will skip it.
-export VECTOR_TEST_SUBJECTS=filebeat=7.1.1,fluentbit=1.1.0,fluentd=3.3.0-1,logstash=7.0.1,splunk_heavy_forwarder=7.2.6-c0bf0f679ce9,splunk_universal_forwarder=7.2.5.1-962d9a8e1586,telegraf=1.11.0-1,vector=0.2.0-23-ge84cde3
+export VECTOR_TEST_SUBJECTS=filebeat=7.1.1,fluentbit=1.1.0,fluentd=3.3.0-1,logstash=7.0.1,splunk_heavy_forwarder=7.2.6-c0bf0f679ce9,splunk_universal_forwarder=7.2.5.1-962d9a8e1586,telegraf=1.11.0-1,vector=0.5.0
 
 # Update with your own user_id. This namespaces all tests and resources to your
 # user_id. Ex: ben
