--- a/cases/disk_buffer_performance/ansible/run.yml
+++ b/cases/disk_buffer_performance/ansible/run.yml
@@ -1,13 +1,13 @@
 ---
 - import_playbook: reset.yml
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}'
   become: true
   tasks:
     - set_fact:
         subject_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_subject'].0] }}"
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   tasks:
     - name: Start consumer TCP server
@@ -17,7 +17,7 @@
         action: start_and_wait
         server_port: "{{ consumer_port }}"
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Start {{ test_subject }}
@@ -26,7 +26,7 @@
       vars:
         action: start
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_producer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
     - name: Wait for port {{ subject_port }} to become available
@@ -47,7 +47,7 @@
       register: timeout
       failed_when: timeout.rc != 124
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Start profiling {{ test_subject }}
@@ -56,7 +56,7 @@
       vars:
         action: start
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_producer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
     - name: Pipe test data to {{ test_subject }}
@@ -71,7 +71,7 @@
       register: timeout
       failed_when: timeout.rc != 124
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Stop profiling {{ test_subject }}
@@ -86,7 +86,7 @@
       vars:
         action: stop
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   tasks:
     - name: Stop consumer TCP server
