--- a/cases/sighup_correctness/ansible/configure/fluentbit.yml
+++ b/cases/sighup_correctness/ansible/configure/fluentbit.yml
@@ -2,7 +2,7 @@
 - include_role:
     name: fluentbit
   vars:
-    action: set_config
+    action: configure
     configuration_files:
       - src: config_files/td-agent-bit.conf
         dest: td-agent-bit.conf
