--- a/cases/sighup_correctness/ansible/configure/fluentd.yml
+++ b/cases/sighup_correctness/ansible/configure/fluentd.yml
@@ -2,5 +2,5 @@
 - include_role:
     name: fluentd
   vars:
-    action: set_config
+    action: configure
     configuration_file: config_files/td-agent.conf
