--- a/cases/sighup_correctness/ansible/configure/splunk_universal_forwarder.yml
+++ b/cases/sighup_correctness/ansible/configure/splunk_universal_forwarder.yml
@@ -2,7 +2,7 @@
 - include_role:
     name: splunk_universal_forwarder
   vars:
-    action: set_config
+    action: configure
     configuration_files:
       - src: config_files/splunk.inputs.conf
         dest: inputs.conf
