--- a/cases/tcp_to_blackhole_performance/ansible/run.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/run.yml
@@ -1,13 +1,13 @@
 ---
 - import_playbook: reset.yml
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}'
   become: true
   tasks:
     - set_fact:
         subject_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_subject'].0] }}"
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Start {{ test_subject }}
@@ -16,7 +16,7 @@
       vars:
         action: start
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_producer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
     - name: Wait for subject {{ subject_instance.ec2_private_ip_address }}:{{ subject_port }} to become available
@@ -37,7 +37,7 @@
       register: timeout
       failed_when: timeout.rc != 124
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Start profiling {{ test_subject }}
@@ -46,7 +46,7 @@
       vars:
         action: start
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_producer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
     - name: Pipe test data to {{ test_subject }}
@@ -61,7 +61,7 @@
       register: timeout
       failed_when: timeout.rc != 124
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Stop profiling {{ test_subject }}
