--- a/cases/wrapped_json_correctness/ansible/bootstrap.yml
+++ b/cases/wrapped_json_correctness/ansible/bootstrap.yml
@@ -1,37 +1,26 @@
 ---
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}'
   tasks:
     - meta: refresh_inventory
     - name: Wait 600 seconds for target connection to become reachable/usable
       wait_for_connection:
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
-    - utilities
-    - python3
-    - awscli
-
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
-  become: true
-  roles:
-    - role: flog
-
     # We include a TCP server in case the test subject needs it. This
     # is usefule for subjects that do not include simpler output means.
     - role: test_servers
-      action: install
+      action: configure
       http_server_address: "127.0.0.1:{{ http_consumer_port }}"
       tcp_server_address: "127.0.0.1:{{ tcp_consumer_port }}"
 
     - role: filebeat
-      action: install
-      version: "{{ filebeat_version }}"
+      action: configure
       configuration_file: "config_files/filebeat.yml"
 
     - role: fluentbit
-      action: install
-      version: "{{ fluentbit_version }}"
+      action: configure
       configuration_files:
         - src: config_files/td-agent-bit.conf
           dest: td-agent-bit.conf
@@ -39,18 +28,15 @@
           dest: parsers.conf
 
     - role: fluentd
-      action: install
-      version: "{{ fluentd_version }}"
+      action: configure
       configuration_file: "config_files/td-agent.conf"
 
     - role: logstash
-      action: install
-      version: "{{ logstash_version }}"
+      action: configure
       configuration_file: "config_files/logstash.settings.yml"
       pipeline_file: "config_files/logstash.pipeline.conf"
       
     - role: vector
-      action: install
-      version: "{{ vector_version }}"
+      action: configure
       configuration_file: "config_files/vector.toml"
 
