--- a/ansible/roles/splunk_universal_forwarder/tasks/install.yml
+++ b/ansible/roles/splunk_universal_forwarder/tasks/install.yml
@@ -22,8 +22,6 @@
     path: /tmp/splunk_universal_forwarder.deb
     state: absent
 
-- include: set_config.yml
-
 - name: Install Splunk Universal Forwarder limits configuration
   copy:
     src: limits.conf
@@ -38,7 +36,7 @@
     remote_src: no
 
 # This ensures that the process is not running. Each test is responsible
-# for starting and stopp the relevant services.
+# for starting and stopping the relevant services.
 - name: Ensure the splunk_universal_forwarder service is stopped
   systemd:
     name: splunk_universal_forwarder
