--- a/cases/disk_buffer_performance/ansible/reset.yml
+++ b/cases/disk_buffer_performance/ansible/reset.yml
@@ -1,4 +1,4 @@
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
     - role: fluentbit
@@ -14,7 +14,7 @@
     - role: vector
       action: reset
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   roles:
     - role: tcp_test_server
