--- a/cases/file_to_tcp_performance/ansible/bootstrap.yml
+++ b/cases/file_to_tcp_performance/ansible/bootstrap.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}'
   tasks:
     - meta: refresh_inventory
     - name: Wait 600 seconds for target connection to become reachable/usable
@@ -8,50 +8,36 @@
     - debug:
         var: playbook_dir
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}'
   become: true
-  roles:
-    - utilities
-    - python3
-    - awscli
   tasks:
     - set_fact:
         consumer_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_consumer'].0] }}"
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
-    - role: profiling
-      action: install
-
-    - role: flog
-
     - role: filebeat
-      action: install
-      version: "{{ filebeat_version }}"
+      action: configure
       configuration_file: "config_files/filebeat.yml"
 
     - role: fluentbit
-      action: install
-      version: "{{ fluentbit_version }}"
+      action: configure
       configuration_files:
         - src: config_files/td-agent-bit.conf
           dest: td-agent-bit.conf
 
     - role: fluentd
-      action: install
-      version: "{{ fluentd_version }}"
+      action: configure
       configuration_file: "config_files/td-agent.conf"
 
     - role: logstash
-      action: install
-      version: "{{ logstash_version }}"
+      action: configure
       configuration_file: "config_files/logstash.subject.settings.yml"
       pipeline_file: "config_files/logstash.subject.pipeline.conf"
 
     - role: splunk_heavy_forwarder
-      action: install
-      version_with_hash: "{{ splunk_heavy_forwarder_version }}"
+      action: configure
       configuration_files:
         - src: config_files/splunk.inputs.conf
           dest: inputs.conf
@@ -59,8 +45,7 @@
           dest: outputs.conf
 
     - role: splunk_universal_forwarder
-      action: install
-      version_with_hash: "{{ splunk_universal_forwarder_version }}"
+      action: configure
       configuration_files:
         - src: config_files/splunk.inputs.conf
           dest: inputs.conf
@@ -68,8 +53,7 @@
           dest: outputs.conf
 
     - role: vector
-      action: install
-      version: "{{ vector_version }}"
+      action: configure
       configuration_file: "config_files/vector.toml"
 
   tasks:
@@ -84,17 +68,16 @@
         > {{ test_files_root }}{{ item }}.log
       with_sequence: count={{ test_file_count }} 
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   roles:
     - role: tcp_test_server
-      action: install
+      action: configure
       server_address: "0.0.0.0:{{ consumer_port }}"
 
     # We install logstash as a consumer since Filebeat has limited output
     # support. Unsurprisingly, it does not support generic HTTP or TCP outputs
     # and implements a proprietary "Lumberjack Protocol". To s
     - role: logstash
-      action: install
-      version: "{{ logstash_version }}"
+      action: configure
       pipeline_file: "config_files/logstash.consumer.pipeline.conf"
