--- a/cases/regex_parsing_performance/ansible/run.yml
+++ b/cases/regex_parsing_performance/ansible/run.yml
@@ -1,14 +1,14 @@
 ---
 - import_playbook: reset.yml
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}'
+- hosts: '{{ test_namespace }}'
   become: true
   tasks:
     - set_fact:
         consumer_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_consumer'].0] }}"
         subject_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_subject'].0] }}"
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   tasks:
     - name: Start consumer TCP server
@@ -18,7 +18,7 @@
         action: start_and_wait
         server_port: "{{ consumer_port }}"
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Wait for consumer {{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }} to become available
@@ -33,7 +33,7 @@
       vars:
         action: start
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_producer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
     - name: Wait for subject {{ subject_instance.ec2_private_ip_address }}:{{ subject_port }} to become available
@@ -54,7 +54,7 @@
       register: timeout
       failed_when: timeout.rc != 124
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Start profiling {{ test_subject }}
@@ -63,7 +63,7 @@
       vars:
         action: start
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_producer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
     - name: Pipe test data to {{ test_subject }}
@@ -78,7 +78,7 @@
       register: timeout
       failed_when: timeout.rc != 124
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   tasks:
     - name: Stop profiling {{ test_subject }}
@@ -93,7 +93,7 @@
       vars:
         action: stop
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   tasks:
     - name: Stop consumer TCP server
