--- a/cases/sighup_correctness/ansible/configure/vector.yml
+++ b/cases/sighup_correctness/ansible/configure/vector.yml
@@ -2,5 +2,5 @@
 - include_role:
     name: vector
   vars:
-    action: set_config
+    action: configure
     configuration_file: config_files/vector.toml
