--- a/cases/tcp_to_http_performance/ansible/reset.yml
+++ b/cases/tcp_to_http_performance/ansible/reset.yml
@@ -1,4 +1,4 @@
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
     - role: fluentbit
@@ -10,7 +10,7 @@
     - role: vector
       action: reset
 
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_consumer'
+- hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   roles:
     - role: http_test_server
