--- a/cases/wrapped_json_correctness/ansible/reset.yml
+++ b/cases/wrapped_json_correctness/ansible/reset.yml
@@ -1,4 +1,4 @@
-- hosts: 'tag_TestName_{{ test_name }}:&tag_TestConfiguration_{{ test_configuration }}:&tag_TestUserID_{{ user_id }}:&tag_TestRole_subject'
+- hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
   roles:
     - role: filebeat
